# Distributed_Task_and-Queue_Sheduler

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dtq/: __init__.py  bootstrap.py  broker.py  cli.py  config.py  cron.py  keys.py  lua.py  metrics.py  models.py  registry.py  scheduler.py  tasks.py  util.py  worker.py
dtq/api/: app.py
dtq/api/static/: index.html
examples/: loadtest.py  producer.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dtq.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
scripts/: quickstart.ps1
tests/: conftest.py  test_integration.py  test_unit.py
