[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtq"
version = "0.1.0"
description = "Distributed Task Queue & Job Scheduler (Redis, asyncio, FastAPI, Prometheus)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sachin K" }]
dependencies = [
    "redis>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.20",
    "croniter>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
dtq = "dtq.cli:main"

[tool.setuptools.packages.find]
include = ["dtq*"]

[tool.setuptools.package-data]
dtq = ["api/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
